# jerasure-jni

./: README.md  build.gradle  settings.gradle
.github/workflows/: ci.yml  ci_2.yml
gradle/wrapper/: gradle-wrapper.properties
jerasure-jni-java/: build.gradle
jerasure-jni-java/src/main/java/com/grill/jerasure/: CauchyReedSolomonCodec.java
jerasure-jni-native/: CMakeLists.txt  build.gradle
jerasure-jni-native/src/: native_jerasure_jni.cpp
